add endpoint to rebuild aggregates
